# s

./: auto_labeling_dino_valve.py  pyproject.toml  untitled79.py
dino_labeler/: README.md
src/dino_labeler/: __init__.py  labeler.py
