[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dino_labeler"
version = "0.1.0"
authors = [
  { name="smicurin474", email="your.email@example.com" }
]
description = "A tool for labeling dinosaur images"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/smicurin474/s"
"Bug Tracker" = "https://github.com/smicurin474/s/issues"